Alignment fixed

--- a/assets/style.css
+++ b/assets/style.css
@@ -24,6 +24,9 @@ body {
 .wrapper a img:hover {
   transform: scale(1.02);
 }
+.wrapper p {
+  text-align: center;
+}
 .wrapper .wifi {
   margin-top: 50px;
   margin-bottom: 5px;
